Fix issue with z-index

--- a/src/SearchBlock/edit.less
+++ b/src/SearchBlock/edit.less
@@ -25,3 +25,9 @@
   height: 100%;
   z-index: @overlayZIndex;
 }
+
+body.has-block-chooser {
+  .aboveSearchblockOverlay {
+    z-index: unset;
+  }
+}
